--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <div class="container">
             <div class="item1">
                 <h2>Your Result</h2>
-                <h1>76</h1><br>
-                <h4>of 100</h4>
+                <div class="kor">
+                    <p>76</p>
+                <p>of 100</p>
+                </div>
                 <h2>Great</h2>
                 <p>You scored higher than 65% of the people who have taken these tests.</p>
             </div>
@@ -21,23 +23,24 @@
                 <h2>Summary</h2>
             </div>
             <div class="item3">
-                <h2>Reaction</h2>
-                <h2 class="jobbra">80/100</h2>
+                <p>Reaction</p>
+                <p class="jobbra">80/100</p>
             </div>
             <div class="item4">
-                <h2>Memory</h2>
-                <h2 class="jobbra">92/100</h2>
+                <p>Memory</p>
+                <p class="jobbra">92/100</p>
             </div>
             <div class="item5">
-                <h2>Verbal</h2>
-                <h2 class="jobbra">61/100</h2>
+                <p>Verbal</p>
+                <p class="jobbra">61/100</p>
             </div>
             <div class="item6">
-                <h2>Visual</h2>
-                <h2 class="jobbra">73/100</h2>
+                <p>Visual</p>
+                <p class="jobbra">73/100</p>
             </div>
             <div class="item7">
                 <h2>Continue</h2>
+                
             </div>
         </div>
     </body>
