--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             <div class="item1">
                 <h2>Your Result</h2>
                 <div class="kor">
-                    <p>76</p>
-                <p>of 100</p>
+                    <p class="big">76 <br><span class="small">of 100</span></p>
                 </div>
                 <h2>Great</h2>
                 <p>You scored higher than 65% of the people who have taken these tests.</p>
@@ -23,20 +22,19 @@
                 <h2>Summary</h2>
             </div>
             <div class="item3">
-                <p>Reaction</p>
-                <p class="jobbra">80/100</p>
+                <p><span> <img src="file:///C:/Users/D244TAN-13/AppData/Local/Temp/333eb5a1-d7cb-4b9e-bd37-b7f21253bc82_OneDrive_2025-03-13.zip.c82/icon-reaction.svg" alt="kep"></span>Reaction <span class="jobbra">80/100</span></p>
+
             </div>
             <div class="item4">
-                <p>Memory</p>
-                <p class="jobbra">92/100</p>
+                <p> <span> <img src="file:///C:/Users/D244TAN-13/AppData/Local/Temp/920c48b6-fccc-4068-bbf1-914f377e3ef8_OneDrive_2025-03-13.zip.ef8/icon-memory.svg" alt="kep"></span>Memory <span class="jobbra">92/100</span></p>
+
             </div>
             <div class="item5">
-                <p>Verbal</p>
-                <p class="jobbra">61/100</p>
+                <p> <span> <img src="file:///C:/Users/D244TAN-13/AppData/Local/Temp/e3d116d3-a8a3-4fd4-a408-4627c144e9da_OneDrive_2025-03-13.zip.9da/icon-verbal.svg" alt="kep"></span>Verbal <span class="jobbra">61/100</span></p>
+
             </div>
             <div class="item6">
-                <p>Visual</p>
-                <p class="jobbra">73/100</p>
+                <p> <span><img src="file:///C:/Users/D244TAN-13/AppData/Local/Temp/53936fb5-b048-42a4-9553-2325dea4c965_OneDrive_2025-03-13.zip.965/icon-visual.svg" alt="kep"></span>Visual <span class="jobbra">73/100</span></p>
             </div>
             <div class="item7">
                 <h2>Continue</h2>
